src/objects/Task_Assignment__c.object
<CustomObject>
    <description>Manage Assignment of Tasks with Projects</description>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hourly_rate__c</fullName>
        <label>Hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Harvest_Task_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipName>Harvest_Task_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Assignment</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Task Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>